will adjust layout and alter background colors, as well as correct recurring issue with numbers from <ol> being stuck in image.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,11 @@
+ol {
+  overflow: hidden;
+}
 .me {
   float: left;
-  margin: 4px;
-  padding: 4px;
-  padding-left: 4px;
-  background-color: bg-success;
+  border: 2px solid black;
+  margin-left: 11px;
+  margin-right: 11px;
 }
 .container {
   float: left;
@@ -12,24 +14,24 @@
   margin: 12px;
   border: 2px solid black;
   padding: 8px;
-  background-color: bg-success;
+  background-color: #DE7030;
   font-style: italic;
 }
 .aboutme  {
   margin: 12px;
   border: 2px solid black;
   padding:8px;
-  background-color: bg-success;
+  background-color: #DE7030;
 }
 .projects {
   margin: 12px;
   border: 2px solid black;
   padding:8px;
-  background-color: bg-success;
+  background-color: #DE7030;
 }
 .hobbies  {
   margin: 12px;
   border: 2px solid black;
   padding: 8px;
-  background-color: bg-success;
+  background-color: #DE7030;
 }
